--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,17 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>25.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.6</version>
+		</dependency>
+
 
 	</dependencies>
 
