solve some error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 stripe.api.key=hello
-razorpay.api.key=hello
-stripe.api.secret=hello
+razorpay.api.key=rzp_test_Iwte1qbYBpBzPn
+razorpay.api.secret=BiKDddBnLHR72RAk0kpIlo20
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=akshittayal24@gmail.com
+spring.mail.password=kvrr qkbg zstj sseo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
